--- a/less/home-page.less
+++ b/less/home-page.less
@@ -8,20 +8,27 @@ header{
 
   .bottom-header{
     .top-border();
-    text-align: right;
+    text-align: center;
 
-    h2{
+    .header-text{
+      margin: 0 6.5%;
       text-align: left;
-      margin-left: 13%;
-      margin-top: 2%;
+      .bottom-border();
     }
 
-    p{
-      margin: 1%;
-      margin-left: 12%;
-      text-align: -webkit-left;
-      .bottom-border();
-    }//closes p
+    // h2{
+    //   text-align: center;
+    //   margin-left: 13%;
+    //   margin-top: 2%;
+    // }
+
+    // p{
+    //   margin: 1%;
+    //   text-align: center;
+    //   margin-left: 12%;
+      
+    //   .bottom-border();
+    // }//closes p
     
   }//closes bottom-header
 
